Changes to the footer and my area. also checking the commit precedure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Coding Academy</title>
+  <title>Shachak's Gallery</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -221,10 +221,11 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
-            <ul class="list-inline social-buttons">
+            <img class="mx-auto rounded-circle" src="img/team/me.jpg" alt="">
+            <h4>Shachak Armon</h4>
+            <p class="text-muted">Web developer</p>
+            <!-- Links for soucial -->
+            <!-- <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
                     <i class="fa fa-twitter"></i>
@@ -240,7 +241,7 @@
                     <i class="fa fa-linkedin"></i>
                   </a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
         <div class="col-sm-8 flex-align-center">
@@ -256,31 +257,32 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 flex-align-center">
+        <!-- <div class="col-md-4 flex-align-center">
           <a href="http://coding-academy.org" target="_blank">
             <img src="./img/ca-logo.png" alt="">
           </a>
-        </div>
+        </div> -->
         <div class="col-md-4 flex-align-center">
           <ul class="list-inline social-buttons flex-align-center">
-            <li class="list-inline-item">
+            <!-- Twitter link -->
+            <!-- <li class="list-inline-item">
               <a href="#">
                   <i class="fa fa-twitter"></i>
                 </a>
-            </li>
+            </li> -->
             <li class="list-inline-item flex-align-center">
-              <a href="#">
+              <a href="https://www.facebook.com/shachak.armon/">
                   <i class="fa fa-facebook"></i>
                 </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/shachak-armon-25921623a/">
                   <i class="fa fa-linkedin"></i>
                 </a>
             </li>
           </ul>
         </div>
-        <div class="col-md-4 flex-align-center">
+        <!-- <div class="col-md-4 flex-align-center">
             <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">More Me</a>
@@ -289,11 +291,12 @@
               <a href="#">Even More</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
 
+  
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
