--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
-      <div class="row">
+
+      <div class="row protfolios-list">
+<!--         
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
@@ -210,7 +212,7 @@
             <h4>Window</h4>
             <p class="text-muted">Photography</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -524,6 +526,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
+  <script src="js/proj-services.js"></script>
   <script src="js/ca-gallery.js"></script>
   <script src="js/offCanvas.js"></script>
   <script src="js/main.js"></script>
